--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "keen-slider": "^6.8.6",
     "next": "14.0.0",
     "react": "^18",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-player": "^2.13.0",
     "react-spinners": "^0.13.8"
   },
   "devDependencies": {
