--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
     "keen-slider": "^6.8.6",
     "next": "14.0.0",
     "react": "^18",
@@ -17,7 +18,8 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-player": "^2.13.0",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "swiper": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
