--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/aos": "^3.0.7",
+    "aos": "^2.3.4",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
     "keen-slider": "^6.8.6",
